--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "export": "next export"
   },
   "dependencies": {
-    "next": "10.2.3",
+    "next": "^12.1.6",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
